asserts in xml